--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_BASEURL="http://localhost:8000/api"
-NEXT_PUBLIC_SELF_BASEURL="http://localhost:3000/tracking"
+NEXT_PUBLIC_SELF_BASEURL="http://45.77.43.16:8000/tracking"
