--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,12 +6,14 @@ services:
         build: ./nginx
         ports:
             - 8000:80
-    # go:
-    #     build: ./go
-    # db:
-    #     build: ./db
-    #     environment:
-    #         MYSQL_USER: server
-    #         MYSQL_PASSWORD: hello
-    #         MYSQL_ROOT_PASSWORD: hello
-    #         MYSQL_DATABASE: waybill_cost
+    go:
+        build: ./go
+        ports:
+            - 5000:80
+    db:
+        build: ./db
+        environment:
+            MYSQL_USER: server
+            MYSQL_PASSWORD: hello
+            MYSQL_ROOT_PASSWORD: hello
+            MYSQL_DATABASE: waybill_cost
