--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,19 @@
 version: "3.9"
 services:
-    nextjs:
-        build: ./client
-    nginx:
-        build: ./nginx
-        ports:
-            - 8000:80
+    # nextjs:
+    #     build: ./client
+    # nginx:
+    #     build: ./nginx
+    #     ports:
+    #         - 8000:80
     go:
         build: ./go
         ports:
             - 5000:5000
-    db:
-        build: ./db
-        environment:
-            MYSQL_USER: server
-            MYSQL_PASSWORD: hello
-            MYSQL_ROOT_PASSWORD: hello
-            MYSQL_DATABASE: waybill_cost
+    # db:
+    #     build: ./db
+    #     environment:
+    #         MYSQL_USER: server
+    #         MYSQL_PASSWORD: hello
+    #         MYSQL_ROOT_PASSWORD: hello
+    #         MYSQL_DATABASE: waybill_cost
