--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,19 +1,23 @@
 version: "3.9"
 services:
-    # nextjs:
-    #     build: ./client
-    # nginx:
-    #     build: ./nginx
-    #     ports:
-    #         - 8000:80
+    nextjs:
+        build: ./client
+    nginx:
+        build: ./nginx
+        ports:
+            - 8000:80
+    db:
+        build: ./db
+        environment:
+            MYSQL_USER: server
+            MYSQL_PASSWORD: hello
+            MYSQL_ROOT_PASSWORD: hello
+            MYSQL_DATABASE: waybill_cost
     go:
         build: ./go
+        environment:
+            PORT: ":8000"
+            RAJAONGKIRKEY: "553c7982c1e8205443b4ad8d584e399e"
+            DSN: "server:hello@tcp(db:3306)/waybill_cost?charset=utf8mb4&parseTime=True&loc=Local"
         ports:
-            - 5000:5000
-    # db:
-    #     build: ./db
-    #     environment:
-    #         MYSQL_USER: server
-    #         MYSQL_PASSWORD: hello
-    #         MYSQL_ROOT_PASSWORD: hello
-    #         MYSQL_DATABASE: waybill_cost
+            - 7000:8000
