--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
             MYSQL_DATABASE: waybill_cost
     go:
         build: ./go
+        depends_on:
+            - db
         environment:
             PORT: ":8000"
             RAJAONGKIRKEY: "553c7982c1e8205443b4ad8d584e399e"
