--- a/go/Dockerfile
+++ b/go/Dockerfile
@@ -6,8 +6,10 @@ ADD . /app
 
 WORKDIR /app
 
-RUN go run migration/*.go
+RUN go mod tidy
 
 RUN go build -o main .
+
+RUN go run migration/*.go
 
 CMD ["/app/main"]
