--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -10,6 +10,11 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v2
 
+      - name: Setup node js version
+        uses: actions/setup-node@v2
+        with:
+          node-version: '12'
+
       - name: Check node and yarn
         run: |
           node -v
