--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -23,3 +23,22 @@ jobs:
           cd client
           yarn install
           yarn build
+
+      - name: Upload artiface
+        uses: actions/upload-artifact@v2
+        with:
+          name: nextjs-build
+          path: build
+
+  deploy:
+    needs: build
+    runs-on: ubuntu-latest
+
+    steps:
+      - name: Download artiface
+        uses: actions/download-artifact@v2
+          with: nextjs-build
+
+      - name: Listing
+        run: |
+          ls -la
