upload and download artifact fix

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -37,7 +37,8 @@ jobs:
     steps:
       - name: Download artiface
         uses: actions/download-artifact@v2
-          with: nextjs-build
+          with:
+            name: nextjs-build
 
       - name: Listing
         run: |
