--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -39,6 +39,7 @@ jobs:
         uses: actions/download-artifact@v2
         with:
           name: nextjs-build
+          path: build
 
       - name: Listing
         run: |
