--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -27,6 +27,7 @@ jobs:
           ls -la build
 
       - name: Upload artiface
+        if: success()
         uses: actions/upload-artifact@v2
         with:
           name: nextjs-build
