--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -30,4 +30,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
           name: nextjs-build
-          path: ${{ github.workspace }}/build
+          path: ${{ github.workspace }}/client/build
