--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -33,22 +33,26 @@ jobs:
           path: ${{ github.workspace }}/client/build
 
   deploy:
-    - name: Download artifact
-      uses: actions/download-artifact@v2
-      with:
-        name: nextjs-build
+    needs: build
+    runs-on: ubuntu-latest
 
-    - name: Listing
-      run: |
-        ls -la
+    steps:
+      - name: Download artifact
+        uses: actions/download-artifact@v2
+        with:
+          name: nextjs-build
 
-    - name: Deploy to server
-      uses: appleboy/ssh-action@master
-      with:
-        host: ${{ secrets.HOST }}
-        username: ${{ secrets.USERNAME }}
-        port: ${{ secrets.PORT }}
-        key: ${{ secrets.SSHKEY }}
-        script: |
-          cd /home/bangmimin/webapps/temonggoweb/tracking/tracking-dockerize
+      - name: Listing
+        run: |
           ls -la
+
+      - name: Deploy to server
+        uses: appleboy/ssh-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.SSHKEY }}
+          script: |
+            cd /home/bangmimin/webapps/temonggoweb/tracking/tracking-dockerize
+            ls -la
