--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -46,6 +46,17 @@ jobs:
         run: |
           ls -la
 
+      - name: Copy build via scp
+        uses: appleboy/scp-action@master
+        env:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.SSHKEY }}
+        with:
+          source: "."
+          target: "~/.cicd"
+
       - name: Deploy to server
         uses: appleboy/ssh-action@master
         with:
