--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,15 +47,13 @@ jobs:
           ls -la
 
       - name: Copy build via scp
-        uses: appleboy/scp-action@master
-        env:
-          HOST: ${{ secrets.HOST }}
-          USERNAME: ${{ secrets.USERNAME }}
-          PORT: ${{ secrets.PORT }}
-          KEY: ${{ secrets.SSHKEY }}
+        uses: garygrossgarten/github-action-scp@release
         with:
-          source: "."
-          target: "/var/www"
+          local: static
+          remote: ~/.cicd
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USER }}
+          password: ${{ secrets.PASSWORD }}
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
