--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -47,13 +47,14 @@ jobs:
           ls -la
 
       - name: Copy build via scp
-        uses: garygrossgarten/github-action-scp@release
+        uses: appleboy/scp-action@master
         with:
-          local: static
-          remote: ~/.cicd
           host: ${{ secrets.HOST }}
-          username: ${{ secrets.USER }}
+          username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
+          port: ${{ secrets.PORT }}
+          source: "./static"
+          target: "/var/www"
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
