--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -60,8 +60,8 @@ jobs:
           username: ${{ secrets.USERNAME }}
           password: ${{ secrets.PASSWORD }}
           port: ${{ secrets.PORT }}
-          source: "./*"
-          target: "~/.cicd"
+          source: "~/foo"
+          target: "./static"
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
