--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -49,13 +49,13 @@ jobs:
         with:
           name: nextjs-build
 
-      - name: Listing & move all to build folder
+      - name: Listing
         run: |
-          ls -la
           mkdir build
           ls -la
-          mv !(build) build
-          ls -la build
+
+      - name: Test
+        run: mv !(build) build
 
       # - name: Copy build via scp
       #   uses: appleboy/scp-action@master
