--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -54,6 +54,8 @@ jobs:
           mkdir build
           ls -la
           mv *[!build] build
+          ls -la
+          ls build
 
       # - name: Copy build via scp
       #   uses: appleboy/scp-action@master
