--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -15,16 +15,16 @@ jobs:
         with:
           node-version: '12'
 
-      # - name: Building
-      #   run: |
-      #     node -v
-      #     yarn -v
-      #     ls -la
-      #     cd client
-      #     yarn install
-      #     yarn build
-      #     ls -la
-      #     ls -la build
+      - name: Building
+        run: |
+          node -v
+          yarn -v
+          ls -la
+          cd client
+          yarn install
+          yarn build
+          ls -la
+          ls -la build
 
       - name: Build dumy
         run: |
@@ -58,15 +58,15 @@ jobs:
           ls -la
           ls build
 
-      # - name: Copy build via scp
-      #   uses: appleboy/scp-action@master
-      #   with:
-      #     host: ${{ secrets.HOST }}
-      #     username: ${{ secrets.USERNAME }}
-      #     port: ${{ secrets.PORT }}
-      #     key: ${{ secrets.SSHKEY }}
-      #     source: "."
-      #     target: "foo"
+      - name: Copy build via scp
+        uses: appleboy/scp-action@master
+        with:
+          host: ${{ secrets.HOST }}
+          username: ${{ secrets.USERNAME }}
+          port: ${{ secrets.PORT }}
+          key: ${{ secrets.SSHKEY }}
+          source: "."
+          target: "foo"
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
