--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -58,15 +58,24 @@ jobs:
           ls -la
           ls build
 
-      - name: Copy build via scp
-        uses: appleboy/scp-action@master
-        with:
-          host: ${{ secrets.HOST }}
-          username: ${{ secrets.USERNAME }}
-          port: ${{ secrets.PORT }}
-          key: ${{ secrets.SSHKEY }}
-          source: "."
-          target: "foo"
+      # - name: Copy build via scp
+      #   uses: appleboy/scp-action@master
+      #   with:
+      #     host: ${{ secrets.HOST }}
+      #     username: ${{ secrets.USERNAME }}
+      #     port: ${{ secrets.PORT }}
+      #     key: ${{ secrets.SSHKEY }}
+      #     source: "."
+      #     target: "foo"
+
+      uses: easingthemes/ssh-deploy@main
+      env:
+        SSH_PRIVATE_KEY: ${{ secrets.SSHKEY }}
+        ARGS: "-rltgoDzvO"
+        SOURCE: "build/"
+        REMOTE_HOST: ${{ secrets.HOST }}
+        REMOTE_USER: ${{ secrets.USER }}
+        TARGET: "~/foo"
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
