--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -67,16 +67,17 @@ jobs:
       #     key: ${{ secrets.SSHKEY }}
       #     source: "."
       #     target: "foo"
+      - name: Install SSH Key
+        uses: shimataro/ssh-key-action@v2
+        with:
+          key: ${{ secrets.SSHKEY }} 
+
+       - name: Adding Known Hosts
+          run: ssh-keyscan -H ${{ secrets.HOST }} >> ~/.ssh/known_hosts
 
       - name: Copy build via scp
-        uses: easingthemes/ssh-deploy@main
-        env:
-          SSH_PRIVATE_KEY: ${{ secrets.SSHKEY }}
-          ARGS: "-rltgoDzvO"
-          SOURCE: "."
-          REMOTE_HOST: ${{ secrets.HOST }}
-          REMOTE_USER: ${{ secrets.USERNAME }}
-          TARGET: "foo"
+        run: |
+          rsync -avz ./build ${{ secrets.USERNAME }}@${{ secrets.HOST }}:~/foo
 
       - name: Deploy to server
         uses: appleboy/ssh-action@master
