--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASEURL="https://temonggo.com/api"
-NEXT_PUBLIC_SELF_BASEURL="https://temonggo.com/tracking"
+NEXT_PUBLIC_API_BASEURL="http://localhost:5000/api"
+NEXT_PUBLIC_SELF_BASEURL="https://localhost:8000/tracking"
