update nginx config docker

--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -25,7 +25,7 @@ server {
     add_header X-Cache-Status $upstream_cache_status;
   }
 
-  location /tracking {
+  location / {
     proxy_pass http://nextjs_upstream;
   }
 }
