--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_BASEURL="http://45.32.119.197:5000/api"
-NEXT_PUBLIC_SELF_BASEURL="https://app.bangmimin.com/tracking"
+NEXT_PUBLIC_SELF_BASEURL="https://app.bangmimin.com"
