--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_BASEURL="https://app.bangmimin.com/api"
+NEXT_PUBLIC_API_BASEURL="https://app.bangmimin.com/go-api/"
 NEXT_PUBLIC_SELF_BASEURL="http://45.32.119.197:8000"
