remove trailing slash

--- a/client/.env.production
+++ b/client/.env.production
@@ -1,2 +1,2 @@
 NEXT_PUBLIC_API_BASEURL="https://app.bangmimin.com/go-api/"
-NEXT_PUBLIC_SELF_BASEURL="https://app.bangmimin.com/"
+NEXT_PUBLIC_SELF_BASEURL="https://app.bangmimin.com"
