--- a/client/package.json
+++ b/client/package.json
@@ -14,7 +14,7 @@
   "dependencies": {
     "@types/react-redux": "^7.1.16",
     "axios": "^0.21.1",
-    "next": "10.2.3",
+    "next": "^11.1.2",
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-onclickoutside": "^6.11.2",
