--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -6,7 +6,6 @@ RUN npm install --global pm2
 COPY ./package*.json ./
 COPY ./ ./
 RUN ls -la
-RUN yarn install
 EXPOSE 3000
 USER root
-CMD [ "pm2-runtime", "yarn start" ]
+CMD [ "pm2-runtime", "yarn dev" ]
